--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ span.important { color:red; }
 <div class="header">
 <a style="color: grey; line-height: 5mm;" href="https://oaei.ontologymatching.org/2025/">Ontology Alignment Evaluation Initiative - OAEI 2025 Campaign</a><a href="https://oaei.ontologymatching.org/"><img src="../oaeismall.jpg" alt="OAEI" style="float:right; margin-left: 5pt; border-style:none;"/></a>
 </div>
-
+<!--
 <div class="yellowbar">
 <a href="./results">preliminary results</a> for the tracks available
 </div>
-
+-->
 <h1>Ontology Alignment Evaluation Initiative</h1>
 <h1>2025 Campaign</h1>
 
@@ -255,18 +255,18 @@ OAEI evaluation report in accordance to the
 
 <p>
 <dl compact="1">
-<dt><b><s>June 30th</s></b></dt><dd> preliminary datasets available.</dd>
-<dt><b><s>July 31st</s></b></dt><dd><b>preparation phase ends</b> and final datasets are available.</dd>
-<dt><b><s>July 31st</s></b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3WdD3N3">this form</a> (requires a google account and a valid email)</dd>
-<dt><b><s>August 31st</s></b></dt><dd><b>execution phase ends</b> and participants submit final versions of their tools. MELT tracks (zip or tar.gz file, e.g., LogMap.zip) using this <a href="https://bit.ly/3XZaUdZ">form</a>. HOBBIT tracks (via <a href="https://hobbit-project.github.io/OAEI_2024.html">platform</a>). </dd>
+<dt><b>June 30th</b></dt><dd> preliminary datasets available.</dd>
+<dt><b>July 31st</b></dt><dd><b>preparation phase ends</b> and final datasets are available.</dd>
+<dt><b>July 31st</b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3WdD3N3">this form</a> (requires a google account and a valid email)</dd>
+<dt><b>August 31st</b></dt><dd><b>execution phase ends</b> and participants submit final versions of their tools. MELT tracks (zip or tar.gz file, e.g., LogMap.zip) using this <a href="https://bit.ly/3XZaUdZ">form</a>. HOBBIT tracks (via <a href="https://hobbit-project.github.io/OAEI_2024.html">platform</a>). </dd>
 <!--<dt><b><s>July 31st</s> (extended deadline August 14th)</b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3Y8qrX3">this form</a> (requires a google account and a valid email)</dd> -->
 <!--<dt><b><s>August 31st</s> (extended deadline September 15th)</b></dt><dd><b>execution phase ends</b> and participants submit final versions of their tools. MELT tracks (zip or tar.gz file, e.g., LogMap.zip) using this <a href="https://bit.ly/454upSF">form</a>. HOBBIT tracks (via <a href="https://hobbit-project.github.io/OAEI_2024.html">platform</a>). </dd> -->
-<dt><b><s>September 22nd</s></b></dt><dd><b>alignments submission</b>. This applies only when your tool requires substantial hardware or software resources. Please use <a href="https://bit.ly/4cuJykz">this form</a> for submission.</dd>
-<dt><b><s>September 30th</s></b></dt><dd><b>evaluation phase ends</b> and results are available.</dd>
-<dt><b><s>October 14th</s>October 21th</b></dt><dd>Preliminary version of system papers due. Submit PDF paper (e.g., LogMap_prelim.pdf). Please use <a href="https://bit.ly/4cuFFfe">this form</a> (requires a google account and a valid email).</dd>
-<dt><b>November 11th or 12th</b></dt><dd><a href="http://om.ontologymatching.org/2025">The 20th Ontology matching workshop</a></dd>
-<dt><b>November 13-15th</b></dt><dd><a href="https://iswc2025.semanticweb.org/">The 24th International Semantic Web Conference</a><!-- (check <a href="https://iswc2024.semanticweb.org/student-travel-grants/">ISWC 2024 student travel grants</a>)-->.</dd>
-<dt><b>November 30th</b></dt><dd>Final version of system papers due. Submit a PDF (e.g., LogMap_final.pdf) paper. Please use <a href="https://bit.ly/4eVdGqz">this form</a> (requires a google account and a valid email).</dd>
+<dt><b>September 22nd</b></dt><dd><b>alignments submission</b>. This applies only when your tool requires substantial hardware or software resources. Please use <a href="https://bit.ly/4cuJykz">this form</a> for submission.</dd>
+<dt><b>September 30th</b></dt><dd><b>evaluation phase ends</b> and results are available.</dd>
+<dt><b>October 14th</b></dt><dd>Preliminary version of system papers due. Submit PDF paper (e.g., LogMap_prelim.pdf). Please use <a href="https://bit.ly/4cuFFfe">this form</a> (requires a google account and a valid email).</dd>
+<dt><b>November 2nd or 3rd</b></dt><dd><a href="http://om.ontologymatching.org/2025">The 20th Ontology matching workshop</a></dd>
+<dt><b>November 2-6th</b></dt><dd><a href="https://iswc2025.semanticweb.org/">The 24th International Semantic Web Conference</a><!-- (check <a href="https://iswc2024.semanticweb.org/student-travel-grants/">ISWC 2024 student travel grants</a>)-->.</dd>
+<dt><b>November 23th</b></dt><dd>Final version of system papers due. Submit a PDF (e.g., LogMap_final.pdf) paper. Please use <a href="https://bit.ly/4eVdGqz">this form</a> (requires a google account and a valid email).</dd>
 </dl>
 </p>
 
