--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ track are not good at all.
 
 <p>
 The results will be reported at the <a href="http://om.ontologymatching.org/2025">International Workshop on Ontology Matching</a>, 
-which will be collocated with the <a href="https://iswc2025.semanticweb.org/">24nd International Semantic Web Conference</a> (ISWC 2025).
+which will be collocated with the <a href="https://iswc2025.semanticweb.org/">24th International Semantic Web Conference</a> (ISWC 2025).
 </p>
 
 <h2>OAEI rules</h2>
