--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ represented as trajectories (i.e., sequences of longitude, latitude pairs).
 </dd>
 
 <dt><a href="pharmacogenomics/index.html">Pharmacogenomics</a> (pgx)</dt>
-<dd>The Pharmacogenomics Track involves n-ary tuples representing so-called "pharmacogenomic relationships" and their components of three distinct types: drugs, genetic factors, and phenotypes..
+<dd>The Pharmacogenomics Track involves n-ary tuples representing so-called "pharmacogenomic relationships" and their components of three distinct types: drugs, genetic factors, and phenotypes.
 </dd>
 
     
