--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ This track evaluates the detection of complex correspondences between ontologies
 This track consists of finding alignments between food concepts from CIQUAL, the French food nutritional composition database, and food concepts from SIREN. Food concepts from both databases are described in LanguaL, a well-known multilingual thesaurus using faceted classification. 
 </dd>
  
-<dt><a href="results/interactive/interactive.htm">Interactive matching evaluation</a>
+<dt><a href="interactive/index.html">Interactive matching evaluation</a>
   (interactive) <img width="30" border="0" src="../seals-logo.jpg"/></dt>
 <dd>
 This track offers the possibility to compare different interactive matching tools which require user interaction. 
