--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ OAEI evaluation report in accordance to the
 <dl compact="1">
 <dt><b>June 30th</b></dt><dd> preliminary datasets available.</dd>
 <dt><b>July 31st</b></dt><dd><b>preparation phase ends</b> and final datasets are available.</dd>
-<dt><b>July 31st</b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3WdD3N3">this form</a> (requires a google account and a valid email)</dd>
+<dt><b>July 31st</b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3UuBYic">this form</a> (requires a google account and a valid email)</dd>
 <dt><b>August 31st</b></dt><dd><b>execution phase ends</b> and participants submit final versions of their tools. MELT tracks (zip or tar.gz file, e.g., LogMap.zip) using this <a href="https://bit.ly/3XZaUdZ">form</a>. HOBBIT tracks (via <a href="https://hobbit-project.github.io/OAEI_2024.html">platform</a>). </dd>
 <!--<dt><b><s>July 31st</s> (extended deadline August 14th)</b> </dt><dd>participants register their tool (mandatory). Please use <a href="https://bit.ly/3Y8qrX3">this form</a> (requires a google account and a valid email)</dd> -->
 <!--<dt><b><s>August 31st</s> (extended deadline September 15th)</b></dt><dd><b>execution phase ends</b> and participants submit final versions of their tools. MELT tracks (zip or tar.gz file, e.g., LogMap.zip) using this <a href="https://bit.ly/454upSF">form</a>. HOBBIT tracks (via <a href="https://hobbit-project.github.io/OAEI_2024.html">platform</a>). </dd> -->
