update general relation track

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@ supersedes the previous <a href="http://www.cs.ox.ac.uk/isg/projects/SEALS/oaei/
     The Circular Economy track is about matching relevant Circular Economy ontologies.
   </dd>
 
+<a name="GeneralRelation" />
+<dt><a href="generalrelations/index.html">General relation</a></a></dt>
+<dd>
+  This track addresses the growing demand for semantic integration where simple equivalence mappings are insufficient. 
+</dd>
+
 
 <h3>Instance and schema matching</h3>
 
