--- a/ce/index.html
+++ b/ce/index.html
@@ -103,6 +103,7 @@
 	<a>Jana Vata&scaron;&ccaron;inov&aacute;</a>,
 	<a href="https://nb.vse.cz/~svabo/">Ond&rcaron;ej Zamazal</a>,
 	<a href="http://huanyuli.se">Huanyu Li</a>,
+	<a href="https://liu.se/medarbetare/yinli71">Ying Li</a>,
 	<a href="https://liu.se/medarbetare/evabl45">Eva Blomqvist</a>, and
 	<a href="http://www.ida.liu.se/~patla00/">Patrick Lambrix</a>. 
 	If you have any problems working with the ontologies, any questions related to tool wrapping, or any suggestions related to the ce track, feel free to write an email oaei-ce [at] groups [dot] liu [dot] se.</p>
