--- a/ce/index.html
+++ b/ce/index.html
@@ -32,7 +32,7 @@
 <h2>Modalities</h2>
 -->
 
-<p>The CE track in 2025 consists of 1 task to match 2 ontologies in the Circular Economy domain, with the standard configuration of your matching system. The two ontologies are the Circular Economy Ontology Network (CEON) and Sustainable Bioeconomy and Bioproducts Ontology (BiOnto). </p>
+<p>The CE track in 2025 consists of 2 task. The frist task is to match 2 ontologies in the Circular Economy domain, with the standard configuration of your matching system. The two ontologies are the Circular Economy Ontology Network (CEON) [3] and Sustainable Bioeconomy and Bioproducts Ontology (BiOnto) [4]. The second task is to the CE-related ontology, CEON, with a materials domain ontology, MatOnto [5]. </p>
 
 
 <!--
@@ -78,19 +78,16 @@
 			</ul>
 			</div>
 			<p></p>
-<!--
 
-
-<h2>Acknowledgements</h2>
-
-<p>Martin Ringwald and Terry Hayamizu (Mouse Genome Informatics - http://www.informatics.jax.org/) provided us with an intial reference mapping for the matching task of this track [1].</p>
-
-<p>Elena Beisswanger improved the datasets with respect to several problems (see also [2]).</p>
-
-
-
-
--->
+<div class="testsuite">
+			<span class="title">CE Testsuite (CEON and MatOnto)</span>
+			<ul>
+			  <li>Repository: <span class="testsuiteid">http://oaei.webdatacommons.org/tdrs/</span></li>
+				<li>Suite-ID: <span class="testsuiteid">ce_track</span></li>
+			  <li>Version-ID: <span class="testsuiteid">mat_track</span></li>
+			</ul>
+			</div>
+			<p></p>
 
 
 
@@ -110,10 +107,11 @@
 
 <h2>Bibliography</h2>
 
-<p>[1] Li H, Blomqvist E, Lambrix P, "Initial and Experimental Ontology Alignment Results in the Circular Economy Domain", The 2nd International Workshop on Knowledge Graphs for Sustainability (KG4S) at the 21st ESWC, May 27th, Hersonissos, Greece, 2025.</p>
-<p>[2] Jansen M, Blomqvist E, Keskis&auml;rkk&auml; R, Li H, Lindecrantz M, Wannerberg K, Pomp A, Meisen T, Berg H. "Modelling Digital Product Passports for the Circular Economy", The 2nd International Workshop on Knowledge Graphs for Sustainability (KG4S) at the 21st ESWC, May 27th, Hersonissos, Greece, 2025.</p>
-<p>[3] Blomqvist E, Li H, Keskis&auml;rkk&auml; R, Lindecrantz M, Abd Nikooie Pour M, Li Y, Lambrix P, "Cross-domain Modelling -- A Network of Core Ontologies for the Circular Economy", The 14th Workshop on Ontology Design and Patterns (WOP 2023) at the 22nd International Semantic Web Conference (ISWC 2023), Athens, Greece, 2023.</p>
-
+<p>[1] Li H, Blomqvist E, Lambrix P. Initial and Experimental Ontology Alignment Results in the Circular Economy Domain. The 2nd International Workshop on Knowledge Graphs for Sustainability (KG4S) at the 21st ESWC, May 27th, Hersonissos, Greece, 2025.</p>
+<p>[2] Jansen M, Blomqvist E, Keskis&auml;rkk&auml; R, Li H, Lindecrantz M, Wannerberg K, Pomp A, Meisen T, Berg H. Modelling Digital Product Passports for the Circular Economy. The 2nd International Workshop on Knowledge Graphs for Sustainability (KG4S) at the 21st ESWC, May 27th, Hersonissos, Greece, 2025.</p>
+<p>[3] Blomqvist E, Li H, Keskis&auml;rkk&auml; R, Lindecrantz M, Abd Nikooie Pour M, Li Y, Lambrix P. Cross-domain Modelling -- A Network of Core Ontologies for the Circular Economy. The 14th Workshop on Ontology Design and Patterns (WOP 2023) at the 22nd International Semantic Web Conference (ISWC 2023), Athens, Greece, 2023.</p>
+<p>[4] Bicchielli C, Biancone N, Ferri F, Grifoni P. BiOnto: An ontology for sustainable bioeconomy and bioproducts. Sustainability. 2021 Apr 12;13(8):4265.</p>
+<p>[5] Cheung K, Drennan J, Hunter J. Towards an Ontology for Data-driven Discovery of New Materials. InAAAI Spring Symposium: Semantic Scientific Knowledge Integration 2008 Mar 26 (pp. 9-14).</p>
 <div class="address">
 <div class="footer">http://oaei.ontologymatching.org/2025/ce/</div>
 <!--$Id$-->
