--- a/ce/index.html
+++ b/ce/index.html
@@ -74,7 +74,7 @@
 			<ul>
 			  <li>Repository: <span class="testsuiteid">http://oaei.webdatacommons.org/tdrs/</span></li>
 				<li>Suite-ID: <span class="testsuiteid">ce_track</span></li>
-			  <li>Version-ID: <span class="testsuiteid">ce_track</span></li>
+			  <li>Version-ID: <span class="testsuiteid">ce_ce</span></li>
 			</ul>
 			</div>
 			<p></p>
@@ -84,7 +84,7 @@
 			<ul>
 			  <li>Repository: <span class="testsuiteid">http://oaei.webdatacommons.org/tdrs/</span></li>
 				<li>Suite-ID: <span class="testsuiteid">ce_track</span></li>
-			  <li>Version-ID: <span class="testsuiteid">mat_track</span></li>
+			  <li>Version-ID: <span class="testsuiteid">ce_mat</span></li>
 			</ul>
 			</div>
 			<p></p>
