--- a/ce/index.html
+++ b/ce/index.html
@@ -70,15 +70,15 @@
 
 
 <div class="testsuite">
-			<span class="title">CE Testsuite (CEON and BiOnto)</span>
+			<span class="title">CE Testsuite</span>
 			<ul>
 			  <li>Repository: <span class="testsuiteid">http://oaei.webdatacommons.org/tdrs/</span></li>
 				<li>Suite-ID: <span class="testsuiteid">ce_track</span></li>
-			  <li>Version-ID: <span class="testsuiteid">ce_ce</span></li>
+			  <li>Version-ID: <span class="testsuiteid">v2</span></li>
 			</ul>
 			</div>
 			<p></p>
-
+<!--
 <div class="testsuite">
 			<span class="title">CE Testsuite (CEON and MatOnto)</span>
 			<ul>
@@ -88,7 +88,7 @@
 			</ul>
 			</div>
 			<p></p>
-
+-->
 
 
 
