--- a/ce/index.html
+++ b/ce/index.html
@@ -1,6 +1,6 @@
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Ontology Alignment Evaluation Initiative::Anatomy</title>
+<title>Ontology Alignment Evaluation Initiative::CE</title>
 
 <!-- <link rel="stylesheet" type="text/css" href="http://oaei.ontologymatching.org/2015/style.css" /> -->
 <link rel="stylesheet" type="text/css" href="../style.css">
